QOL-385 PWM DC #2 MED: Cross-site Scripting - R2. Disable PWM features that aren't required

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -90,9 +90,9 @@ http.client.promiscuous.wordlist.enable=true
 http.header.server=@PwmAppName@
 http.header.sendContentLanguage=true
 http.header.sendXAmb=true
-http.header.sendXInstance=true
-http.header.sendXNoise=true
-http.header.sendXSessionID=true
+http.header.sendXInstance=false
+http.header.sendXNoise=false
+http.header.sendXSessionID=false
 http.header.sendXVersion=false
 http.header.sendXContentTypeOptions=true
 http.header.sendXXSSProtection=true
