QOL-386 PWM DC #2 MED: IP Address spoofing - Disable PWM features that aren't required

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -89,7 +89,7 @@ http.client.requestTimeoutMs=60000
 http.client.promiscuous.wordlist.enable=true
 http.header.server=@PwmAppName@
 http.header.sendContentLanguage=true
-http.header.sendXAmb=true
+http.header.sendXAmb=false
 http.header.sendXInstance=false
 http.header.sendXNoise=false
 http.header.sendXSessionID=false
