add peoplesearch orgchart client config properties

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -223,6 +223,8 @@ password.randomGenerator.jitter.count=50
 peoplesearch.values.verifyUserDN=true
 peoplesearch.values.maxCount=100
 peoplesearch.view.detail.links=
+peoplesearch.orgChart.enableChildCount=true
+peoplesearch.orgChart.maxParents=50
 queue.email.retryTimeoutMs=10000
 queue.email.maxCount=100000
 queue.email.maxThreads=0
