eps statistics refactoring

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -93,6 +93,7 @@ http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
 http.resources.expirationSeconds=86400
 http.resources.gzip.enable=true
+http.resources.pathNonce.length=32
 http.resources.pathNonceEnable=true
 http.resources.pathNoncePrefix=nonce-
 http.resources.zipFiles=[]
