fix issues with client side regex form checking

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -44,6 +44,7 @@ client.ajax.typingTimeout=20000
 client.ajax.typingWait=700
 client.formNonce.enable=true
 client.formNonce.length=10
+client.form.clientRegexEnable=true
 client.warningHeader.show=true
 client.pwShowRevertTimeout=45000
 client.js.enableHtml5Dialog=true
