Added the option to use zxcvbn for password meter strength estimation.
This feature can be enabled under Settings > Modules > Authenticated > Change Password > Use zxcvbn for Strength Meter Algorithm.

See:
https://github.com/dropbox/zxcvbn
https://www.usenix.org/system/files/conference/usenixsecurity16/sec16_paper_wheeler.pdf

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -784,6 +784,11 @@
             <artifactId>caffeine</artifactId>
             <version>2.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.nulab-inc</groupId>
+            <artifactId>zxcvbn</artifactId>
+            <version>1.2.3</version>
+        </dependency>
 
 
 
