--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -223,6 +223,11 @@ otp.encryptionAlg=AES
 password.randomGenerator.maxAttempts=2000
 password.randomGenerator.maxLength=1024
 password.randomGenerator.jitter.count=50
+password.strength.threshold.veryStrong=100
+password.strength.threshold.strong=75
+password.strength.threshold.good=45
+password.strength.threshold.weak=20
+password.strength.threshold.veryWeak=0
 peoplesearch.values.verifyUserDN=true
 peoplesearch.values.maxCount=100
 peoplesearch.view.detail.links=
