--- a/server/pom.xml
+++ b/server/pom.xml
@@ -182,7 +182,7 @@
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <fork>true</fork>
-                    <compilerArgs>
+                    <compilerargs>
                         <arg>-Werror</arg>
                         <arg>-Xlint:all</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
@@ -194,7 +194,7 @@
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                    </compilerArgs>
+                    </compilerargs>
                 </configuration>
             </plugin>
             <plugin>
