--- a/onejar/pom.xml
+++ b/onejar/pom.xml
@@ -19,6 +19,10 @@
         <tomcat.version>9.0.4</tomcat.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+
+        <warArtifactID>pwm-${project.version}.war</warArtifactID>
+
     </properties>
 
     <build>
