--- a/client/package.json
+++ b/client/package.json
@@ -43,8 +43,11 @@
     "json-loader": "0.5.4",
     "karma": "0.13.19",
     "karma-jasmine": "1.0.2",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-chrome-launcher": "2.2.0",
     "karma-phantomjs-launcher": "0.2.3",
     "karma-sourcemap-loader": "0.3.6",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "1.7.0",
     "ngtemplate-loader": "1.3.1",
     "node-sass": "3.10.1",
