--- a/client/package.json
+++ b/client/package.json
@@ -8,65 +8,66 @@
     "npm": ">=3.9"
   },
   "scripts": {
-    "build": "webpack --config=webpack.build.js --NODE_ENV=production",
+    "build": "webpack --config=webpack.build.js",
     "clean": "rimraf dist/",
-    "test": "karma start --NODE_ENV=test",
-    "test-single-run": "karma start --NODE_ENV=test --singleRun --no-auto-watch",
-    "start": "webpack-dev-server --config=webpack.dev.js --NODE_ENV=dev --colors",
-    "sync": "webpack --config=webpack.build.js --NODE_ENV=production --output-path=../server/target/pwm-1.8.0-SNAPSHOT/public/resources/webjars/pwm-client --watch --colors"
+    "test": "karma start",
+    "test-single-run": "karma start --singleRun --no-auto-watch",
+    "start": "webpack-dev-server --config=webpack.dev.js --colors",
+    "sync": "webpack --config=webpack.build.js --output-path=../server/target/pwm-1.8.0-SNAPSHOT/public/resources/webjars/pwm-client --watch --colors"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@types/angular": "1.6.6",
-    "@types/angular-mocks": "1.5.5",
-    "@types/angular-translate": "2.4.33",
-    "@types/angular-ui-router": "1.1.34",
-    "@types/jasmine": "2.5.35",
-    "@types/node": "6.0.45",
-    "@uirouter/angularjs": "1.0.5",
-    "angular": "1.6.5",
-    "angular-mocks": "1.6.5",
-    "angular-translate": "2.15.2",
-    "autoprefixer": "6.5.3",
-    "copy-webpack-plugin": "3.0.1",
-    "css-loader": "0.25.0",
-    "file-loader": "0.9.0",
+    "@types/angular": "1.6.42",
+    "@types/angular-mocks": "1.5.11",
+    "@types/angular-translate": "2.15.1",
+    "@types/angular-ui-router": "1.1.40",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "9.4.2",
+    "@uirouter/angularjs": "1.0.14",
+    "angular": "1.6.9",
+    "angular-mocks": "1.6.9",
+    "angular-translate": "2.17.0",
+    "autoprefixer": "7.2.5",
+    "copy-webpack-plugin": "4.4.1",
+    "css-loader": "0.28.9",
+    "file-loader": "1.1.6",
     "fontgen-loader": "0.2.1",
-    "html-loader": "0.4.4",
-    "html-webpack-plugin": "2.22.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "2.30.1",
     "ignore-loader": "0.1.2",
-    "jasmine": "2.5.2",
-    "jshint": "2.9.3",
-    "jshint-loader": "0.8.3",
-    "json-loader": "0.5.4",
-    "karma": "0.13.19",
-    "karma-jasmine": "1.0.2",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "jasmine": "3.0.0",
+    "jasmine-core": "^2.99.1",
+    "jshint": "2.9.5",
+    "jshint-loader": "0.8.4",
+    "json-loader": "0.5.7",
+    "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-phantomjs-launcher": "0.2.3",
-    "karma-sourcemap-loader": "0.3.6",
+    "karma-jasmine": "1.1.1",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "1.7.0",
-    "ngtemplate-loader": "1.3.1",
-    "node-sass": "3.10.1",
+    "karma-webpack": "2.0.9",
+    "ngtemplate-loader": "2.0.1",
+    "node-sass": "4.7.2",
     "phantomjs": "2.1.7",
-    "phantomjs-prebuilt": "2.1.13",
-    "postcss-loader": "1.0.0",
+    "phantomjs-prebuilt": "2.1.16",
+    "postcss-loader": "2.1.0",
     "raw-loader": "0.5.1",
-    "rimraf": "2.5.4",
-    "sass-loader": "4.0.2",
-    "string-replace-loader": "1.0.5",
-    "style-loader": "0.13.1",
-    "ts-loader": "0.9.1",
-    "tslint": "^3.15.1",
-    "tslint-loader": "2.1.5",
-    "typescript": "2.3.4",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.16.2",
-    "webpack-merge": "0.14.1",
-    "write-file-webpack-plugin": "3.3.0"
+    "rimraf": "2.6.2",
+    "sass-loader": "6.0.6",
+    "string-replace-loader": "1.3.0",
+    "style-loader": "0.20.1",
+    "ts-loader": "3.5.0",
+    "tslint": "^5.9.1",
+    "tslint-loader": "3.5.3",
+    "typescript": "2.7.1",
+    "url-loader": "0.6.2",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.11.1",
+    "webpack-merge": "4.1.1",
+    "write-file-webpack-plugin": "4.2.0"
   }
 }
