Added a test for the Helpdesk Service Created a karma test suite, to improve performance, and make it easier to keep common libraries in one place. Added the karma-sourcemap-loader, so we get the right line numbers on the command line.

--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
         "string-replace-loader": "1.3.0",
         "style-loader": "0.20.1",
         "ts-loader": "3.5.0",
+        "ts-mockito": "2.2.9",
         "tslint": "^5.9.1",
         "tslint-loader": "3.5.3",
         "typescript": "2.7.1",
