Made some adjustments to get the new Help Desk and People Search "hooked in" to the JSP pages.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -837,6 +837,11 @@
             <version>1.6.5</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>angular-aria</artifactId>
+            <version>1.6.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular-ui-router</artifactId>
             <version>1.0.3</version>
