allow db index creation bypass

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -75,6 +75,7 @@ db.jdbcLoadStrategy=AppPathFileLoader,Classpath
 db.connections.max=5
 db.connections.timeoutMs=30000
 db.connections.watchdogFrequencySeconds=30
+db.init.haltOnIndexCreateError=false
 db.schema.keyLength=128
 download.filename.statistics.csv=Statistics.csv
 download.filename.reportSummary.csv=UserReportSummary.csv
