--- a/server/pom.xml
+++ b/server/pom.xml
@@ -818,7 +818,7 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular</artifactId>
-            <version>1.6.5</version>
+            <version>1.6.9</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
@@ -826,14 +826,14 @@
             <version>1.6.9</version>
         </dependency>
         <dependency>
-            <groupId>org.webjars.npm</groupId>
+            <groupId>org.webjars.bower</groupId>
             <artifactId>angular-ui-router</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular-translate</artifactId>
-            <version>2.15.2</version>
+            <version>2.17.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.webjars.npm</groupId>
