--- a/server/src/main/resources/password/pwm/PwmConstants.properties
+++ b/server/src/main/resources/password/pwm/PwmConstants.properties
@@ -31,6 +31,7 @@ httpHeaderAuthorizationBasic=Basic
 defaultBadPasswordAttempt=BADPASSWORDATTEMPT
 log.removedValue=*hidden*
 pwm.appName=PWM
+pwm.client.webjarName=pwm-client
 trial=false
 url.pwm-home=https://github.com/pwm-project/pwm
 url.pwm-cloud=https://pwm-cloud.appspot.com
