fix to remove oauth tokens from TRACE log output

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -109,6 +109,7 @@ http.gzip.enable=true
 http.errors.allowHtml=true
 http.basicAuth.charset=UTF-8
 http.body.maxReadLength=10485760
+http.client.alwaysLogEntities=false
 http.client.socketTimeoutMs=60000
 http.client.connectTimeoutMs=60000
 http.client.requestTimeoutMs=60000
