Updated client-side packages to their latest versions, and made a few changes to account for how the updated packages work.

--- a/client/package.json
+++ b/client/package.json
@@ -8,71 +8,73 @@
         "npm": ">=3.9"
     },
     "scripts": {
-        "build": "webpack --config=webpack.build.js --env.NODE_ENV=production",
+        "build": "webpack --config=webpack.build.js --mode=production",
         "clean": "rimraf dist/",
-        "test": "karma start --env.NODE_ENV=test",
-        "test-single-run": "karma start --env.NODE_ENV=test --singleRun --no-auto-watch",
-        "start": "webpack-dev-server --config=webpack.dev.js --env.NODE_ENV=dev --colors",
-        "sync": "webpack --config=webpack.build.js --env.NODE_ENV=production --output-path=../server/target/pwm-1.8.0-SNAPSHOT/public/resources/webjars/pwm-client --watch --colors"
+        "test": "karma start --mode=development",
+        "test-single-run": "karma start --mode=development --singleRun --no-auto-watch",
+        "start": "webpack-dev-server --config=webpack.dev.js --mode=development --colors",
+        "sync": "webpack --config=webpack.build.js --mode=production --output-path=../server/target/pwm-1.8.0-SNAPSHOT/public/resources/webjars/pwm-client --watch --progress --colors"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {},
     "devDependencies": {
         "@microfocus/ias-icons": "1.0.0-alpha",
-        "@microfocus/ux-ias": "1.0.0-alpha.1",
         "@microfocus/ng-ias": "1.0.0-alpha.2",
-        "@types/angular": "1.6.42",
+        "@microfocus/ux-ias": "1.0.0-alpha.1",
+        "@types/angular": "1.6.43",
         "@types/angular-mocks": "1.5.11",
-        "@types/angular-translate": "2.15.1",
+        "@types/angular-translate": "2.15.2",
         "@types/angular-ui-router": "1.1.40",
         "@types/jasmine": "2.8.6",
-        "@types/node": "9.4.2",
-        "@uirouter/angularjs": "1.0.14",
+        "@types/node": "9.4.7",
+        "@uirouter/angularjs": "1.0.15",
         "angular": "1.6.9",
         "angular-aria": "1.6.9",
         "angular-mocks": "1.6.9",
         "angular-translate": "2.17.0",
-        "autoprefixer": "7.2.5",
-        "copy-webpack-plugin": "4.4.1",
-        "css-loader": "0.28.9",
-        "file-loader": "1.1.6",
+        "autoprefixer": "8.1.0",
+        "copy-webpack-plugin": "4.5.1",
+        "css-loader": "0.28.10",
+        "file-loader": "1.1.11",
         "html-loader": "0.5.5",
-        "html-webpack-plugin": "2.30.1",
+        "html-webpack-plugin": "3.0.6",
         "ignore-loader": "0.1.2",
-        "jasmine": "3.0.0",
-        "jasmine-core": "2.99.1",
+        "jasmine": "3.1.0",
+        "jasmine-core": "3.1.0",
         "jshint": "2.9.5",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
         "karma": "2.0.0",
         "karma-chrome-launcher": "2.2.0",
         "karma-jasmine": "1.1.1",
-        "karma-jasmine-html-reporter": "0.2.2",
+        "karma-jasmine-html-reporter": "1.0.0",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-sourcemap-loader": "0.3.7",
         "karma-spec-reporter": "0.0.32",
-        "karma-webpack": "2.0.9",
+        "karma-webpack": "2.0.13",
         "moment": "2.21.0",
         "ngtemplate-loader": "2.0.1",
         "node-sass": "4.7.2",
         "phantomjs": "2.1.7",
         "phantomjs-prebuilt": "2.1.16",
-        "postcss-loader": "2.1.0",
+        "postcss-loader": "2.1.1",
         "raw-loader": "0.5.1",
         "rimraf": "2.6.2",
-        "sass-loader": "6.0.6",
-        "string-replace-loader": "1.3.0",
-        "style-loader": "0.20.1",
-        "ts-loader": "3.5.0",
-        "ts-mockito": "2.2.9",
+        "sass-loader": "6.0.7",
+        "string-replace-loader": "2.1.1",
+        "style-loader": "0.20.3",
+        "ts-loader": "4.0.1",
+        "ts-mockito": "2.3.0",
         "tslint": "5.9.1",
-        "tslint-loader": "3.5.3",
-        "typescript": "2.7.1",
-        "url-loader": "0.6.2",
-        "webpack": "3.10.0",
-        "webpack-dev-server": "2.11.1",
-        "webpack-merge": "4.1.1",
+        "tslint-loader": "3.6.0",
+        "typescript": "2.7.2",
+        "uglifyjs-webpack-plugin": "1.2.3",
+        "url-loader": "1.0.1",
+        "webpack": "4.1.1",
+        "webpack-cli": "2.0.12",
+        "webpack-dev-server": "3.1.1",
+        "webpack-merge": "4.1.2",
         "write-file-webpack-plugin": "4.2.0"
     }
 }
