--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -23,6 +23,7 @@
 # Default application values.  This is not an end user modifiable file.  Values
 # can be overridden in configuration at Settings -> Application -> App Property Overrides
 
+activateUser.token.autoSelectSingleDestination=false
 application.fileLock.filename=applicationPath.lock
 application.fileLock.waitSeconds=120
 application.wordlistRetryImportSeconds=600
@@ -83,6 +84,7 @@ download.filename.reportRecords.csv=UserReportRecords.csv
 download.filename.auditRecords.csv=AuditRecords.csv
 download.filename.ldapPermission.csv=LDAPPermissionRecommendations.csv
 download.filename.userDebug.json=userDebug.json
+forgottenPassword.token.autoSelectSingleDestination=false
 form.email.regexTest=^[_+a-zA-Z0-9-]+(\\.[_a-zA-Z0-9-]+)*@[a-zA-Z0-9-]+(\\.[a-zA-Z0-9-]+)*$
 healthCheck.enabled=true
 healthCheck.nominalCheckIntervalSeconds=60
