--- a/server/pom.xml
+++ b/server/pom.xml
@@ -769,6 +769,12 @@
             <groupId>com.github.ziplet</groupId>
             <artifactId>ziplet</artifactId>
             <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.googlejavaformat</groupId>
+                    <artifactId>google-java-format</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
