--- a/onejar/src/main/resources/password/pwm/Resource.properties
+++ b/onejar/src/main/resources/password/pwm/Resource.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+envVarPrefix=PWM
 defaultContext=pwm
 defaultWorkPathName=.pwm-workpath
 defaultPort=8443
